# primp.net

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PORTING_PLAN.md  README.md  SECURITY.md  primp.net.sln
.github/workflows/: benchmark.yml  ci.yml  native-build.yml  release.yml
benchmarks/Primp.Benchmarks/: HttpBenchmarks.cs  PerfComparisonRunner.cs  Primp.Benchmarks.csproj  Program.cs
benchmarks/original-primp/: Cargo.toml
benchmarks/original-primp/src/: main.rs
benchmarks/results/: comparison-aggregate.json  comparison-summary.json  comparison-summary.run1.json  comparison-summary.run2.json  primp-dotnet.json  primp-original-rust.json
examples/Primp.Example/: Primp.Example.csproj  Program.cs
examples/dotnet-cli/: Primp.DotnetCli.csproj  Program.cs
native/primp-ffi/: Cargo.toml
native/primp-ffi/src/: lib.rs
scripts/: build-primp-ffi.ps1  build-primp-ffi.sh  compare-performance.ps1  compare-performance.sh
src/Primp/: Impersonate.cs  ImpersonateOS.cs  Primp.csproj  PrimpClient.cs  PrimpClientBuilder.cs  PrimpException.cs  PrimpResponse.cs
src/Primp.Extensions/: Primp.Extensions.csproj  PrimpClientOptions.cs  ServiceCollectionExtensions.cs
tests/Primp.Tests.Cli.Integration/: CliTests.cs  LocalEndpointFixture.cs  Primp.Tests.Cli.Integration.csproj
tests/Primp.Tests.Integration/: ImpersonationTests.cs  LocalEndpointFixture.cs  Primp.Tests.Integration.csproj  PrimpClientTests.cs
tests/Primp.Tests.Unit/: ImpersonateOSTests.cs  ImpersonateTests.cs  Primp.Tests.Unit.csproj  PrimpClientBuilderTests.cs  PrimpClientOptionsTests.cs  PrimpExceptionTests.cs
(+3 files in other folders)
