[package]
name = "original-primp-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
primp = { git = "https://github.com/deedy5/primp", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
hyper = { git = "https://github.com/deedy5/primp", branch = "main" }
hyper-util = { git = "https://github.com/deedy5/primp", branch = "main" }
h2 = { git = "https://github.com/deedy5/primp", branch = "main" }
reqwest = { git = "https://github.com/deedy5/primp", branch = "main" }
rustls = { git = "https://github.com/deedy5/primp", branch = "main" }
